Added nox CRUD
