# src/controllers/co2.controller.ts
@@ -1,18 +1,19 @@
 import {  CO2Full } from "@prisma/client";
-import { Get, Route, Tags, Post, Body, Path, Delete } from "tsoa";
+import { Get, Route, Tags, Post, Body, Path, Delete, Query, Put } from "tsoa";
 import {
  createCo2,
  getCo2,
  getCo2s,
- deleteCo2
+ deleteCo2,
+ updateCo2
 } from "../repositories/co2.repository";
 
 @Route("co2")
 @Tags("CO2")
 export default class CO2Controller {
   @Get("/")
-  public async getCo2s(): Promise<CO2Full[]> {
-    return await getCo2s();
+  public async getCo2s(@Query() offset: number, @Query() limit: number): Promise<CO2Full[]> {
+    return await getCo2s(offset, limit);
   }
 
   @Post("/")
@@ -20,8 +21,13 @@ export default class CO2Controller {
     return await createCo2(body);
   }
 
-  @Get("/:fe/:intervalweight/:teu/:transporttype")
-  public async getCo2(@Path() fe: string, @Path() intervalweight: string, @Path() teu: string, @Path() transporttype: string): Promise<CO2Full | null> {
+  @Put("/")
+  public async updateCo2(@Body() body: CO2Full): Promise<CO2Full> {
+    return await updateCo2(body);
+  }
+
+  @Get("/query")
+  public async getCo2(@Query() fe: string, @Query() intervalweight: string, @Query() teu: string, @Query() transporttype: string): Promise<CO2Full | null> {
     return await getCo2(fe, intervalweight, teu, transporttype);
   }
 
