# src/routes/nox.router.ts
@@ -1,12 +1,12 @@
 import express from "express";
-import Co2Controller from "../controllers/co2.controller";
+import NoxController from "../controllers/nox.controller";
 
 const router = express.Router();
 
 router.get("/", async (_req, res) => {
   try {
-    const controller = new Co2Controller();
-    const response = await controller.getCo2s(Number(_req.query.offset), Number(_req.query.limit));
+    const controller = new NoxController();
+    const response = await controller.getNoxs(Number(_req.query.offset), Number(_req.query.limit));
     return res.send(response);
   } 
   catch(err) {
@@ -16,8 +16,8 @@ router.get("/", async (_req, res) => {
 
 router.get("/", async (req, res) => {
   try {
-    const controller = new Co2Controller();
-    const response = await controller.getCo2(String(req.query.fe), String(req.query.intervalweight),String(req.query.teu), String(req.query.transporttype));
+    const controller = new NoxController();
+    const response = await controller.getNox( String(req.query.intervalweight),String(req.query.teu), String(req.query.transporttype));
     res.setHeader('Content-Type', 'application/json');
     return res.send(response);
   }
@@ -31,8 +31,8 @@ router.get("/", async (req, res) => {
 
 router.post("/", async (req, res) => {
   try {
-     const controller = new Co2Controller();
-     const response = await controller.createCo2(req.body);
+     const controller = new NoxController();
+     const response = await controller.createNox(req.body);
      res.setHeader("Content-type", "application/json")
      return res.send(response);
   } catch(error) {
@@ -42,8 +42,8 @@ router.post("/", async (req, res) => {
 
  router.put("/", async (req, res) => {
   try {
-     const controller = new Co2Controller();
-     const response = await controller.updateCo2(req.body);
+     const controller = new NoxController();
+     const response = await controller.updateNox(req.body);
      res.setHeader("Content-type", "application/json")
      return res.send(response);
   } catch(error) {
@@ -53,8 +53,8 @@ router.post("/", async (req, res) => {
 
 router.delete("/:fe/:intervalweight/:teu/:transporttype", async (req, res) => {
   try {
-    const controller = new Co2Controller();
-    const response = await controller.deleteCo2(String(req.query.fe), String(req.query.intervalweight),String(req.query.teu), String(req.query.transporttype));
+    const controller = new NoxController();
+    const response = await controller.deleteNox( String(req.query.intervalweight),String(req.query.teu), String(req.query.transporttype));
     res.setHeader('Content-Type', 'application/json');
 
     return res.send(response);
